<resources>
    <string name="app_name">515 Social</string>

    <string name="home_fragment_title">Suggested</string>
    <string name="explore_fragment_title">Explore</string>
    <string name="favorites_fragment_title">Saved</string>
    <string name="interests_title">Interests</string>
    <string name="detail_title">Detail</string>
    <string name="event_image_desc">Image for event</string>

    <string name="action_settings">Settings</string>
    <string name="general_settings">General Settings</string>

    <string name="pref_sort_by_label">Sort by</string>
    <string name="pref_sort_by_key" translatable="false">sortby</string>

    <string name="pref_sort_by_interest_label">Interest</string>
    <string name="pref_sort_by_interest_key" translatable="false">sortbyinterest</string>
    <string name="pref_sort_by_date_label">Date</string>
    <string name="pref_sort_by_date_key" translatable="false">sortbydate</string>
    <string name="pref_sort_by_default_key" translatable="false">sortbydate</string>

    <string name="pref_interests_category_label">Interests</string>
    <string name="pref_interests_category_key" translatable="false">interest</string>

    <string name="settings_item_interests">Interests</string>
    <string name="settings_item_about">About</string>

    <string name="interest_circus">Circus</string>
    <string name="interest_comedy">Comedy</string>
    <string name="interest_culinary">Culinary</string>
    <string name="interest_dance_movement">Dance/Movement</string>
    <string name="interest_education">Education</string>
    <string name="interest_featured_event">Featured Event</string>
    <string name="interest_film">Film</string>
    <string name="interest_kids">Kids</string>
    <string name="interest_lifestyle">Lifestyle</string>
    <string name="interest_literary">Literary</string>
    <string name="interest_music">Music</string>
    <string name="interest_social">Social</string>
    <string name="interest_technology">Technology</string>
    <string name="interest_theater">Theater</string>
    <string name="interest_visual_art">Visual Art</string>

    <string name="interest_circus_value">circus</string>
    <string name="interest_comedy_value">comedy</string>
    <string name="interest_culinary_value">culinary</string>
    <string name="interest_dance_movement_value">dancemovement</string>
    <string name="interest_education_value">education</string>
    <string name="interest_featured_event_value">featuredevent</string>
    <string name="interest_film_value">film</string>
    <string name="interest_kids_value">kids</string>
    <string name="interest_lifestyle_value">lifestyle</string>
    <string name="interest_literary_value">literary</string>
    <string name="interest_music_value">music</string>
    <string name="interest_social_value">social</string>
    <string name="interest_technology_value">technology</string>
    <string name="interest_theater_value">theater</string>
    <string name="interest_visual_art_value">visualart</string>

    <string name="button_learn_more">Info</string>
    <string name="button_favorite">Favorite</string>
    <string name="button_unfavorite">Unfavorite</string>
    
    <string name="name_mahesh_gaya">Mahesh Gaya</string>
    <string name="name_henry_parker">Henry Parker</string>
    <string name="name_ryan_kurt">Ryan Kurt</string>
    <string name="name_emily_walton">Emily Walton</string>
    <string name="name_melissa_studach">Melissa Studach</string>

    <string name="about_label">About</string>
    <string name="about_credits">Credits</string>
    <string name="about_programmer">Programmers</string>
    <string name="about_designer">Designer</string>
    <string name="about_writer">Documentation Writer</string>

    <string name="event_removed">Event removed from your Saved list</string>
    <string name="event_added">Event added to your Saved list</string>
</resources>
