<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="@string/pref_interests_category_key"
        android:title="@string/pref_interests_category_label"
        android:persistent="false">
        <CheckBoxPreference
            android:key="@string/interest_circus_value"
            android:title="@string/interest_circus"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_comedy_value"
            android:title="@string/interest_comedy"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_culinary_value"
            android:title="@string/interest_culinary"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_dance_movement_value"
            android:title="@string/interest_dance_movement"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_education_value"
            android:title="@string/interest_education"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_featured_event_value"
            android:title="@string/interest_featured_event"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_film_value"
            android:title="@string/interest_film"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_kids_value"
            android:title="@string/interest_kids"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_lifestyle_value"
            android:title="@string/interest_lifestyle"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_literary_value"
            android:title="@string/interest_literary"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_music_value"
            android:title="@string/interest_music"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_social_value"
            android:title="@string/interest_social"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_technology_value"
            android:title="@string/interest_technology"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_theater_value"
            android:title="@string/interest_theater"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/interest_visual_art_value"
            android:title="@string/interest_visual_art"
            android:defaultValue="true"/>

    </PreferenceScreen>
</PreferenceScreen>