<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:cardCornerRadius="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageview_card"
            android:src="@drawable/interests_technology"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_height="@dimen/image_layout_height" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/textview_card_title"
                android:textColor="@color/colorBlack"
                android:text="@string/interest_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title" />
            <TextView
                android:id="@+id/textview_card_date"
                android:text="Friday, October 26th, 2016 | 02:00 pm"
                android:textSize="@dimen/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null" />
            <TextView
                android:id="@+id/textview_card_interest"
                android:textColor="@color/colorBlack"
                android:text="@string/interest_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:stateListAnimator="@null" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_card_favorite"
                    android:text="@string/button_favorite"
                    android:drawableLeft="@drawable/ic_star_border"
                    android:backgroundTint="@color/colorWhite"
                    android:drawablePadding="@dimen/icon_card_margin"
                    android:stateListAnimator="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/icon_card_margin"
                    android:layout_marginRight="@dimen/icon_card_margin"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />
                <Button
                    android:id="@+id/button_card_learn_more"
                    android:text="@string/button_learn_more"
                    android:drawableLeft="@drawable/ic_info_outline"
                    android:drawablePadding="@dimen/icon_card_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:stateListAnimator="@null"
                    android:layout_marginLeft="@dimen/icon_card_margin"
                    android:layout_marginRight="@dimen/icon_card_margin"
                    android:layout_alignTop="@+id/button_card_favorite"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>